--- a/public/style.css
+++ b/public/style.css
@@ -48,3 +48,21 @@ nav{
     justify-content: space-between;
     font-size: 10px;
 }
+.post-button {
+    align-self: flex-end;
+    height: 35px;
+    width: 90px;
+    border-radius: 20px;
+    border: none;
+    background-color: #138086;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    font-size: 15px;
+    transition: .3s;
+}
+.post-button:hover {
+    transition: .3s;
+    background-color: #0c6266;
+    color: white;
+    border: 2px solid var(--nicebluce);
+}
