--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,7 @@ html, body, #root {
     height: 100%;
     margin: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    overflow-y: auto;
 }
 /****************** ROOT ***************/
 :root {
@@ -24,23 +25,22 @@ html, body, #root {
 }
 /*******************************LOGIN REGISTER PAGE****************************/
 .regLogPage {
-    height: 100%;
+    height: 1200px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 80%
 }
 
 
 .formBox {
     display: flex;
-    width: 80%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
 }
 
-*{
-    box-sizing: border-box;
-}
+
 
 header{
     display: flex;
@@ -53,10 +53,11 @@ header{
 nav{
     display: flex;
     flex-direction: column;
-    width: 30%;
+    width: 11%;
+
 }
 .nav-link{
-    width: 30%;
+    width: 60%;
     font-size: 20px;
     padding: 10px;
     border-radius: 25px;
@@ -69,6 +70,8 @@ nav{
 }
 #body{
     display: flex;
+    height: 100%;
+    gap: 20px;
 }
 #post-form{
     display: flex;
@@ -83,6 +86,11 @@ nav{
 }
 .post-content{
     font-size: 18px;
+}
+#posts-container {
+    overflow-y: scroll;
+    width: 80%;
+    height: auto;
 }
 .bottom-post{
     display: flex;
